# ikpls

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/actions/test/: action.yml
.github/workflows/: package_workflow.yml  pull_request_package_workflow.yml  pull_request_test_workflow.yml  test_workflow.yml
docs/: conf.py  requirements.txt
docs/source/: ikpls.rst  jax.rst  numpy.rst  sklearn.rst
docs/source/fast_cross_validation/: jax.rst  jax_ikpls.rst  numpy.rst
examples/: cross_val_jax.py  cross_val_numpy.py  cross_val_numpy_sklearn.py  cross_val_sklearn.py  fast_cross_val_jax.py  fast_cross_val_numpy.py  fast_weighted_cross_val_numpy.py  fit_predict_jax.py  fit_predict_numpy.py  gradient_jax.py  transform_jax.py  transform_numpy.py  vmap_fit_predict_jax.py  weighted_cross_val_jax.py  weighted_cross_val_numpy.py  weighted_cross_val_sklearn.py  weighted_fit_predict_jax.py  weighted_fit_predict_numpy.py
ikpls/: __init__.py  _pls_steps.py  jax.py  jax_ikpls_alg_1.py  jax_ikpls_alg_2.py  jax_ikpls_base.py  numpy.py  numpy_ikpls.py  sklearn.py
ikpls/_impl/: __init__.py  jax_alg_1.py  jax_alg_2.py  jax_base.py  pls_steps.py  r_y_mapping.py
ikpls/fast_cross_validation/: __init__.py  jax.py  jax_ikpls.py  numpy.py  numpy_ikpls.py
paper/: time_pls.py
paper/timings/: timings.py
tests/: load_data.py  test_ikpls.py  test_jax_dispatch.py  test_numpy_only.py  test_sklearn_conformance.py
