[tool.poetry]
name = "ikpls"
version = "4.0.1"
description = "Improved Kernel PLS and Fast Cross-Validation."
authors = ["sm00thix <oleemail@icloud.com>"]
maintainers = ["sm00thix <oleemail@icloud.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://ikpls.readthedocs.io/en/latest/"
repository = "https://github.com/sm00thix/ikpls"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=3.11, <3.15"
numpy = ">=2.0.0"
scikit-learn = ">=1.5.0"
tqdm = ">=4.66.1"
joblib = ">=1.3.2"
cvmatrix = ">=3.0.0"

# Optional JAX dependencies
jax = {version = ">=0.5.0", optional = true}
jaxlib = {version = ">=0.5.0", optional = true}

[tool.poetry.extras]
jax = ["jax", "jaxlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--typeguard-packages=ikpls",
    "--cov=ikpls",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["ikpls"]
relative_files = true

[tool.coverage.paths]
source = [
    "ikpls/",
    "*/site-packages/ikpls/",
]